--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </section>
     </main>
     <aside>
-      <section class="grid-container">
+      <section class="grid-container1">
         <div class="grid-item" data-aos="fade-up">
           <img src="./assets/HTML.png" alt="HTML">
           <div class="text" data-aos="fade-up">
