--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -41,7 +41,7 @@
       <section data-aos="fade-up">
         <h2 class="h2">SERVICIOS</h2>
       </section>
-      <section class="grid-container">
+      <section class="grid-container2">
         <ul>
             <li data-aos="fade-up"><strong>Diseño personalizado y profesional</strong>  
                 - No uso plantillas genéricas, creo diseños a medida que reflejan tu identidad y valores.  
