--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -8,7 +8,8 @@
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-</head>
+    <link rel="icon" type="Byuro.png" href="../assets/logo.png">
+  </head>
 <body>
     <header>
       <nav class=" u-nav navbar navbar-dark fixed-top">
