--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BYuro Contacto</title>
+    <link rel="icon" type="Byuro.png" href="../assets/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
@@ -54,13 +55,13 @@
               <button class="send" type="submit">Enviar</button>
               <p class="contactame">¡Contactame para más info!</p>
 
-              <input type="hidden" name="_next" value="https://urielarey.github.io/BYuro-indumentaria/">
+              <input type="hidden" name="_next" value="https://www.byurodev.site">
               <input type="hidden" name="_captcha" value="false">
             </form>
           </section>
     </main>
     <footer>
-      <p>&copy;BYuro - Todos los derechos reservados</p>
+      <p>&copy;BYurodev - Todos los derechos reservados</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
