--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -61,7 +61,20 @@
           </section>
     </main>
     <footer>
-      <p>&copy;BYurodev - Todos los derechos reservados</p>
+      <section>
+        <p>&copy;BYurodev - Todos los derechos reservados</p>
+        <figure class="footer-images">
+          <a href="https://www.instagram.com/byuro_/" target="_blank">
+            <img src="../assets/instagram.png" alt="instagram">
+          </a>
+          <a href="https://github.com/Urielarey" target="_blank">
+            <img src="../assets/github-logo-png_seeklogo-304612.png" alt="github">
+          </a>
+          <a href="https://www.linkedin.com/in/uriel-alvarez-rey-405846358" target="_blank">
+            <img src="../assets/linkedin.webp" alt="linkedin">
+          </a>
+        </figure>
+      </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
