arreglo de ajustes

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -42,7 +42,7 @@
       <section class="contacto">
         <article class="form-wrapper" data-aos="fade-up">
             <form class="form-container" action="https://formsubmit.co/contact.byuro@gmail.com" method="POST">
-              <h2 class="h2">CONTACTO</h2>
+              <h2 class="h2Contacto">CONTACTO</h2>
               <label for="nombre">Nombre</label>
               <input type="text" id="nombre" name="nombre" required>
           
