--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -59,6 +59,20 @@
               <input type="hidden" name="_captcha" value="false">
             </form>
           </section>
+          <section>
+            <h2 class="h2Contacto" data-aos="fade-up">SEGUIME EN MIS REDES!</h2>
+            <figure class="redes">
+              <a href="https://www.instagram.com/byurodev/" data-aos="fade-up">
+                <img src="../assets/instagram.png" alt="instagram">
+              </a>
+              <a href="https://github.com/Urielarey" data-aos="fade-up">
+                <img src="../assets/github-logo-png_seeklogo-304612.png" alt="github">
+              </a>
+              <a href="https://www.linkedin.com/in/uriel-alvarez-rey-405846358/" data-aos="fade-up">
+                <img src="../assets/linkedin.webp" alt="linkedin">
+              </a>
+            </figure>
+          </section>
     </main>
     <footer>
       <section>
