--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Desarrollo web profesional a medida. Creamos sitios modernos, rápidos y optimizados para potenciar tu marca o negocio en Internet. Diseño responsive, SEO y experiencia de usuario al máximo nivel.">
+    <meta name="keywords" content="BYurodev, BYuro, byuro, byurodev, desarrollo web, frontend, paginas web, sitios web, web developer">
+    <meta name="author" content="BYurodev">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BYuro Contacto</title>
+    <link rel="canonical" href="https://www.byurodev.site/contacto">
+    <link rel="preload" href="../assets/byurologo.webp">
     <link rel="icon" type="Byuro.png" href="../assets/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
